Bug 374026 - Captive Portal login does not work
Summary: Captive Portal login does not work
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networking in general (other bugs)
Version First Reported In: master
Platform: openSUSE Linux
: NOR normal
Target Milestone: 1.0
Assignee: Lukáš Tinkl
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-12-22 08:04 UTC by Fabian Vogt
Modified: 2024-12-23 18:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian Vogt 2016-12-22 08:04:48 UTC
plasma-nm opens https://kde.org when clicking on the login button after captive-portal detection, but most captive portals only work with http.
Comment 1 Jan Grulich 2016-12-22 08:25:05 UTC
Git commit 704c7b3b1c905efbc76674875584015f013bce3e by Jan Grulich.
Committed on 22/12/2016 at 08:24.
Pushed by grulich into branch 'master'.

Some captive portals seems to have problem redirecting from https

M  +1    -1    kded/portalmonitor.cpp

https://commits.kde.org/plasma-nm/704c7b3b1c905efbc76674875584015f013bce3e
Comment 2 Jan Grulich 2016-12-22 08:25:45 UTC
Git commit 7defc68b673b0e0718081f828cf9f6a06b6b9f33 by Jan Grulich.
Committed on 22/12/2016 at 08:25.
Pushed by grulich into branch 'Plasma/5.8'.

Some captive portals seems to have problem redirecting from https

M  +1    -1    kded/portalmonitor.cpp

https://commits.kde.org/plasma-nm/7defc68b673b0e0718081f828cf9f6a06b6b9f33
Comment 3 sedrubal 2016-12-26 09:03:24 UTC
This does not seem to be very effective. kde.org does (fortunatley) use HSTS:

$> curl -D - -o /dev/null -L http://kde.org
[...]
Strict-Transport-Security: max-age=15768000
[...]

So browsers won't load the captive portal page but display a HTTPS warning.

Therefore we need an HTTP only page like:

- http://nmcheck.gnome.org/check_network_status.txt
- http://golem.de
- http://heise.de

Or the best was a KDE captive portal page.
Comment 4 Jan Grulich 2017-01-02 08:09:19 UTC
Git commit 2220c33916029a3959a163157e6b03081c26d07f by Jan Grulich.
Committed on 02/01/2017 at 08:04.
Pushed by grulich into branch 'master'.

Use KDE specific page for captive portal redirection

M  +1    -1    kded/portalmonitor.cpp

https://commits.kde.org/plasma-nm/2220c33916029a3959a163157e6b03081c26d07f
Comment 5 Jan Grulich 2017-01-02 08:09:58 UTC
Git commit 407cb2cffaf628af2ccd447ca12a582a6e592674 by Jan Grulich.
Committed on 02/01/2017 at 08:09.
Pushed by grulich into branch 'Plasma/5.8'.

Use KDE specific page for captive portal redirection

M  +1    -1    kded/portalmonitor.cpp

https://commits.kde.org/plasma-nm/407cb2cffaf628af2ccd447ca12a582a6e592674
Comment 6 Ben Cooksley 2024-12-23 18:23:44 UTC
Bulk transfer as requested in T17796