Use KDE specific page for captive portal redirection

BUG:374026